--- a/index.html
+++ b/index.html
@@ -11,5 +11,55 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Bees (1080P)-->
+    <!-- https://pixabay.com/pl/videos/download/video-39116_large.mp4?attachment -->
+    <!-- Lake (4K) -->
+    <!-- https://pixabay.com/pl/videos/download/video-67201_large.mp4?attachment -->
+    <!-- Turntable (720P)-->
+    <!-- https://pixabay.com/pl/videos/download/video-65390_tiny.mp4?attachment -->
+    <div class="player">
+      <video src="./video/turntable.mp4" class="video" playsinline></video>
+      <div class="show-controls">
+        <div class="controls-container">
+          <div class="progress-range" title="seek">
+            <div class="progress-bar"></div>
+          </div>
+          <div class="control-group">
+            <div class="controls-left">
+              <div class="play-controls">
+                <i class="fas fa-play" id="play-button"></i>
+              </div>
+              <div class="volume">
+                <div class="volume-icon">
+                  <i class="fas fa-volume-up" title="mute" id="volume-icon"></i>
+                </div>
+                <div class="volume-range" title="change-volume">
+                  <div class="volume-bar"></div>
+                </div>
+              </div>
+            </div>
+            <div class="controls-right">
+              <div class="speed" title="playback rate">
+                <select name="playbackRate" class="player-speed">
+                  <option value="0.5">0.5x</option>
+                  <option value="0.75">0.75x</option>
+                  <option value="1" selected>1x</option>
+                  <option value="1.5">1.5x</option>
+                  <option value="2">2x</option>
+                </select>
+              </div>
+              <div class="time">
+                <span class="time-elapsed"> 00:00 / </span>
+                <span class="time-duration"> 2:38 </span>
+              </div>
+              <div class="fullscreen">
+                <i class="fas fa-expand"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
