Play/pause functionality added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="control-group">
             <div class="controls-left">
               <div class="play-controls">
-                <i class="fas fa-play" id="play-button"></i>
+                <i class="fas fa-play" id="play-button" title="Play"></i>
               </div>
               <div class="volume">
                 <div class="volume-icon">
