--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Turntable (720P)-->
     <!-- https://pixabay.com/pl/videos/download/video-65390_tiny.mp4?attachment -->
     <div class="player">
-      <video src="./video/turntable.mp4" class="video" playsinline></video>
+      <video src="./video/Hang.mp4" class="video" playsinline></video>
       <div class="show-controls">
         <div class="controls-container">
           <div class="progress-range" title="seek">
